# tree-sitter-fluent

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  go.mod  pyproject.toml  setup.py  tree-sitter.json
bindings/go/: binding_test.go
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_fluent/: __init__.py
bindings/rust/: lib.rs
src/: grammar.json  parser.c
